[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/SkillTree/SkillModal.gd" type="Script" id=2]

[node name="SkillModal" type="Node2D"]
script = ExtResource( 2 )

[node name="Dimmer" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -16.0
margin_right = 816.0
margin_bottom = 1512.0
color = Color( 0, 0, 0, 0.384314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModalBackground" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 288.0
margin_right = 704.0
margin_bottom = 752.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
margin_left = 104.0
margin_top = 360.0
margin_right = 680.0
margin_bottom = 576.0
custom_fonts/normal_font = ExtResource( 1 )
text = "This skill permanently gives you 5 extra hit points."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="RichTextLabel" parent="."]
margin_left = 104.0
margin_top = 576.0
margin_right = 480.0
margin_bottom = 616.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Cost: 200"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillNameLabel" type="RichTextLabel" parent="."]
margin_left = 104.0
margin_top = 304.0
margin_right = 656.0
margin_bottom = 368.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Life Boost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 632.0
margin_right = 272.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
margin_left = 472.0
margin_top = 632.0
margin_right = 643.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
